# xfce4-cpufreq-plugin

./: .gitignore  .scan-build-false-positives  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  meson.build
icons/: Makefile.am  Makefile.in  meson.build
icons/16x16/: Makefile.am  Makefile.in
icons/22x22/: Makefile.am  Makefile.in
icons/48x48/: Makefile.am  Makefile.in
icons/scalable/: Makefile.am  Makefile.in
panel-plugin/: Makefile.am  Makefile.in  cpu-freq-dialogs.c  cpu-freq-dialogs.h  cpu-freq-monitor.c  cpu-freq-monitor.h  cpu-freq-overview.c  cpu-freq-overview.h  cpu-freq-plugin.c  cpu-freq-plugin.h  cpufreq-service.c  cpufreq.desktop.in  meson.build  org.xfce.cpufreq.CPUChanger.conf  org.xfce.cpufreq.CPUChanger.service.in  plugin.c  plugin.h  xfce4-cpu-freq-plugin.desktop.in.in  xfce4-cpufreq-configure.c  xfce4-cpufreq-configure.cc  xfce4-cpufreq-configure.h  xfce4-cpufreq-linux-dbus.cc  xfce4-cpufreq-linux-dbus.h  xfce4-cpufreq-linux-procfs.c  xfce4-cpufreq-linux-procfs.cc  xfce4-cpufreq-linux-procfs.h  xfce4-cpufreq-linux-pstate.c  xfce4-cpufreq-linux-pstate.cc  xfce4-cpufreq-linux-pstate.h  xfce4-cpufreq-linux-sysfs.c  xfce4-cpufreq-linux-sysfs.cc  xfce4-cpufreq-linux-sysfs.h  xfce4-cpufreq-linux.c  xfce4-cpufreq-linux.cc  xfce4-cpufreq-linux.h  xfce4-cpufreq-overview.c  xfce4-cpufreq-overview.cc  xfce4-cpufreq-overview.h  xfce4-cpufreq-plugin.c  xfce4-cpufreq-plugin.cc  (+5 more)
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.no  nb.po  nl.po  oc.po  (+22 more)
xfce4++/: Makefile.am  meson.build  util.h
xfce4++/util/: Makefile.am  async.cc  async.h  fixes.h  gtk.cc  gtk.h  memory.cc  meson.build  rc.cc  rc.h  string-utils.cc
